--- a/app/views/autos/_form.html.erb
+++ b/app/views/autos/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div>
     <%= form.label :status, style: "display: block" %>
-    <%= form.number_field :status %>
+    <%= form.select :status, Auto.statuses.keys %>
   </div>
 
   <div>
