Изменила интерфейс на русский

--- a/app/views/autos/_auto.html.erb
+++ b/app/views/autos/_auto.html.erb
@@ -1,21 +1,21 @@
 <div id="<%= dom_id auto %>">
   <p>
-    <strong>Status:</strong>
+    <strong>Статус:</strong>
     <%= auto.status %>
   </p>
 
   <p>
-    <strong>Driver:</strong>
+    <strong>Водитель:</strong>
     <%= auto.driver.name if auto.driver %>
   </p>
 
   <p>
-    <strong>Num:</strong>
+    <strong>Номер:</strong>
     <%= auto.num %>
   </p>
 
   <p>
-    <strong>Mark:</strong>
+    <strong>Марка:</strong>
     <%= auto.mark %>
   </p>
 
