--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -6,9 +6,9 @@
   <% @drivers.each do |driver| %>
     <%= render driver %>
     <p>
-      <%= link_to "Show this driver", driver %>
+      <%= link_to "Подробнее", driver %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New driver", new_driver_path %>
+<%= link_to "Новый водитель", new_driver_path %>
