--- a/app/views/autos/_form.html.erb
+++ b/app/views/autos/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: auto) do |form| %>
   <% if auto.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(auto.errors.count, "error") %> prohibited this auto from being saved:</h2>
+      <h2><%= pluralize(auto.errors.count, "ошибка") %> невозможно создать</h2>
 
       <ul>
         <% auto.errors.each do |error| %>
@@ -12,22 +12,22 @@
   <% end %>
 
   <div>
-    <%= form.label :status, style: "display: block" %>
+    <%= form.label :status, "Статус",  style: "display: block" %>
     <%= form.select :status, Auto.statuses.keys %>
   </div>
 
   <div>
-    <%= form.label :driver_id, style: "display: block" %>
+    <%= form.label :driver_id, "Водитель", style: "display: block" %>
     <%= form.select(:driver_id, ( Driver.all.collect {|t| [ t.name, t.id ] }) + ["",nil] ) %>
   </div>
 
   <div>
-    <%= form.label :num, style: "display: block" %>
+    <%= form.label :num, "Номер", style: "display: block" %>
     <%= form.text_field :num %>
   </div>
 
   <div>
-    <%= form.label :mark, style: "display: block" %>
+    <%= form.label :mark, "Марка", style: "display: block" %>
     <%= form.text_field :mark %>
   </div>
 
