--- a/app/views/autos/edit.html.erb
+++ b/app/views/autos/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing auto</h1>
+<h1>Редактирование автомобиля</h1>
 
 <%= render "form", auto: @auto %>
 
 <br>
 
 <div>
-  <%= link_to "Show this auto", @auto %> |
-  <%= link_to "Back to autos", autos_path %>
+  <%= link_to "Посмотреть", @auto %> |
+  <%= link_to "Вернуться ко всем", autos_path %>
 </div>
