--- a/app/views/autos/index.html.erb
+++ b/app/views/autos/index.html.erb
@@ -1,14 +1,14 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Autos</h1>
+<h1>Автомобили</h1>
 
 <div id="autos">
   <% @autos.each do |auto| %>
     <%= render auto %>
     <p>
-      <%= link_to "Show this auto", auto %>
+      <%= link_to "Посмотреть", auto %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New auto", new_auto_path %>
+<%= link_to "Добавить новый", new_auto_path %>
