--- a/app/views/drivers/_driver.html.erb
+++ b/app/views/drivers/_driver.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id driver %>">
   <p>
-    <strong>Name:</strong>
+    <strong>Имя:</strong>
     <%= driver.name %>
   </p>
 
@@ -10,7 +10,7 @@
   </p>
 
   <p>
-    <strong>Phone:</strong>
+    <strong>Номер телефона:</strong>
     <%= driver.phone %>
   </p>
 
