--- a/app/views/drivers/edit.html.erb
+++ b/app/views/drivers/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing driver</h1>
+<h1>Рдактировать водителя</h1>
 
 <%= render "form", driver: @driver %>
 
 <br>
 
 <div>
-  <%= link_to "Show this driver", @driver %> |
-  <%= link_to "Back to drivers", drivers_path %>
+  <%= link_to "Посмотреть", @driver %> |
+  <%= link_to "Вернуть ко всем", drivers_path %>
 </div>
