--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New driver</h1>
+<h1>Создать водителя</h1>
 
 <%= render "form", driver: @driver %>
 
 <br>
 
 <div>
-  <%= link_to "Back to drivers", drivers_path %>
+  <%= link_to "Вернться ко всем", drivers_path %>
 </div>
