--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @driver %>
 
 <div>
-  <%= link_to "Edit this driver", edit_driver_path(@driver) %> |
-  <%= link_to "Back to drivers", drivers_path %>
+  <%= link_to "Редактировать", edit_driver_path(@driver) %> |
+  <%= link_to "Вернуться ко всем", drivers_path %>
 
   <%= button_to "Destroy this driver", @driver, method: :delete %>
 </div>
