--- a/app/views/treks/edit.html.erb
+++ b/app/views/treks/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing trek</h1>
+<h1>Редактирование</h1>
 
 <%= render "form", trek: @trek %>
 
 <br>
 
 <div>
-  <%= link_to "Show this trek", @trek %> |
-  <%= link_to "Back to treks", treks_path %>
+  <%= link_to "Посмотреть", @trek %> |
+  <%= link_to "Вернуться ко всем", treks_path %>
 </div>
