--- a/app/views/treks/new.html.erb
+++ b/app/views/treks/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New trek</h1>
+<h1>Новая заявка</h1>
 
 <%= render "form", trek: @trek %>
 
 <br>
 
 <div>
-  <%= link_to "Back to treks", treks_path %>
+  <%= link_to "Вернуться ко всем", treks_path %>
 </div>
