Изменила весь интерфейс на русский v2

--- a/app/views/autos/new.html.erb
+++ b/app/views/autos/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New auto</h1>
+<h1>Новый автомобиль</h1>
 
 <%= render "form", auto: @auto %>
 
 <br>
 
 <div>
-  <%= link_to "Back to autos", autos_path %>
+  <%= link_to "Вернуться ко всем", autos_path %>
 </div>
