Изменила интерфейс на русский v3

--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Drivers</h1>
+<h1>водители</h1>
 
 <div id="drivers">
   <% @drivers.each do |driver| %>
