--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -6,5 +6,5 @@
   <%= link_to "Редактировать", edit_driver_path(@driver) %> |
   <%= link_to "Вернуться ко всем", drivers_path %>
 
-  <%= button_to "Destroy this driver", @driver, method: :delete %>
+  <%= button_to "Удалить водителя", @driver, method: :delete %>
 </div>
