--- a/app/views/dispatchers/new.html.erb
+++ b/app/views/dispatchers/new.html.erb
@@ -1,9 +1,4 @@
-<h1>New dispatcher</h1>
+<h1>Регистрация</h1>
 
 <%= render "form", dispatcher: @dispatcher %>
 
-<br>
-
-<div>
-  <%= link_to "Back to dispatchers", dispatchers_path %>
-</div>
