Изменила навигацию на страницах

--- a/app/views/dispatchers/_dispatcher.html.erb
+++ b/app/views/dispatchers/_dispatcher.html.erb
@@ -1,6 +1,8 @@
+<h3>Личные данные</h3>
+
 <div id="<%= dom_id dispatcher %>">
   <p>
-    <strong>Name:</strong>
+    <strong>Имя:</strong>
     <%= dispatcher.name %>
   </p>
 
@@ -10,12 +12,12 @@
   </p>
 
   <p>
-    <strong>Phone:</strong>
+    <strong>Номер телефона:</strong>
     <%= dispatcher.phone %>
   </p>
 
   <p>
-    <strong>Password:</strong>
+    <strong>Пароль:</strong>
     <%= dispatcher.password %>
   </p>
 
