--- a/app/views/dispatchers/edit.html.erb
+++ b/app/views/dispatchers/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing dispatcher</h1>
+<h1>Изменить данные</h1>
 
 <%= render "form", dispatcher: @dispatcher %>
 
 <br>
 
 <div>
-  <%= link_to "Show this dispatcher", @dispatcher %> |
-  <%= link_to "Back to dispatchers", dispatchers_path %>
+  <%= link_to "Посмотреть", @dispatcher %> |
+  <%= link_to "Вернуться в кабинет", root_url %>
 </div>
