Изменила таблицу с заявками

--- a/app/views/treks/_trek.html.erb
+++ b/app/views/treks/_trek.html.erb
@@ -4,5 +4,6 @@
   <td><%= trek.store %></td>
   <td><%= trek.auto.try(:driver).try(:name) %></td>
   <td><%= trek.auto.try(:title) %></td>
+	<td><%= trek.dispatcher.try(:name) %></td>
   <td><%= link_to "Подробнее", trek %></td>
 </tr>
