--- a/app/views/treks/index.html.erb
+++ b/app/views/treks/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Все заявки</h1>
+<h1>Ваши заявки</h1>
 
 <%= link_to "Создать заявку", new_trek_path %>
 
