--- a/app/views/treks/index.html.erb
+++ b/app/views/treks/index.html.erb
@@ -12,6 +12,8 @@
       <th scope="col"><%= sort_link(@q, :store, "Склад", default_order: :asc) %></th>
       <th scope="col">Водитель</th>
       <th scope="col">Автомобиль</th>
+			<th scope="col">Диспетчер</th>
+			<th scope="col">Статус</th>
       <th></th>
     </tr>
   </thead>
