Добавила стиль на таблицу

--- a/app/views/treks/index.html.erb
+++ b/app/views/treks/index.html.erb
@@ -4,7 +4,7 @@
 
 <%= link_to "Создать заявку", new_trek_path %>
 
-<table>
+<table border=1>
   <thead>
     <tr>
       <th scope="col"><%= sort_link(@q, :trek_date, "Дата", default_order: :desc) %></th>
