--- a/app/views/autos/index.html.slim
+++ b/app/views/autos/index.html.slim
@@ -1,12 +1,13 @@
 p style="color: green" = notice
 
-h1 class="font-bold underline"
+h1 class="text-3xl font-bold mx-2 my-3"
   | Автомобили
 
-#autos
-  - @autos.each do |auto|
-    == render auto
-    p
-      = link_to "Посмотреть", auto
+p class="mx-2 py-2 px-8 w-1/6 border border-violet-800 rounded-2xl hover:shadow-md"
+	= link_to "Добавить новый", new_auto_path
 
-= link_to "Добавить новый", new_auto_path
+autos class="flex-col mx-3 p-0.5"
+  - @autos.each do |auto| 
+    == render auto
+    p class="mx-3 hover:text-violet-800"
+      = link_to "Подробнее", auto
