--- a/app/views/treks/new.html.slim
+++ b/app/views/treks/new.html.slim
@@ -6,4 +6,4 @@ h1 class="text-3xl font-bold mx-2 my-3"
 br
 
 div class="mx-2 my-3 hover:text-emerald-700"
-  = link_to "Вернуться ко всем", treks_path 
+  = link_to "Назад", treks_path 
