--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -4,7 +4,7 @@ div class="my-3 text-3xl font-bold flex justify-center"
 
 div class="flex text-2xl justify-around"
   p
-    = link_to "Войти как диспетчер", "/dispatchers/sing_in"
+    = link_to "Войти как диспетчер", new_dispatcher_session_path
   p
     | Войти как водитель
 
