--- a/app/views/treks/index.html.slim
+++ b/app/views/treks/index.html.slim
@@ -19,6 +19,21 @@ h1 class="text-3xl font-bold mx-2 my-3"
 - if logged_in?
   p class="mx-2 py-2 px-12 w-1/6 border border-emerald-700 rounded-2xl hover:shadow-md"
     = link_to "Создать заявку", new_trek_path
+	p class="m-2"
+		=  link_to "Выполненные заявки", "/treks?completed=true"
+
+= form_tag treks_path, method: :get do
+  = text_field_tag :by_date, params[:by_date], placeholder: "Введите дату"
+	= submit_tag "Искать по дате"
+
+= form_tag treks_path, method: :get do
+  = text_field_tag :by_address, params[:by_address], placeholder: "Введите адрес"
+  = submit_tag "Искать по адресу"
+
+= form_tag treks_path, method: :get do 
+  = text_field_tag :by_store, params[:by_store], placeholder: "Введите склад"
+  = submit_tag "Искать по складу"
+
 
 table class="m-4 border border-emerald-700 rounded-2xl"
   thead class="border border-emerald-700"
